--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;500;600;700&display=swap");
 
+.light {
+	--clr-primary: #2978b5;
+	--shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.dark {
+	--clr-primary: #90a0d9;
+	--shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+}
+
 * {
 	box-sizing: border-box;
 	padding: 0;
@@ -27,4 +37,29 @@ h5,
 h6 {
 	font-family: "Poppins", sans-serif;
 	font-weight: 700;
+}
+
+.subtle-link {
+	display: inline-block;
+	position: relative;
+	/* color: inherit; */
+	text-decoration: none;
+}
+
+.subtle-link:after {
+	content: "";
+	position: absolute;
+	width: 100%;
+	transform: scaleX(0);
+	height: 2px;
+	bottom: 0;
+	left: 0;
+	background-color: #0087ca;
+	transform-origin: bottom right;
+	transition: transform 0.25s ease-out;
+}
+
+.subtle-link:hover:after {
+	transform: scaleX(1);
+	transform-origin: bottom left;
 }
