--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 
-.light {
-	--clr-primary: #2978b5;
-	--shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-}
-
-.dark {
-	--clr-primary: #90a0d9;
-	--shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
-}
-
+/* ----------------------------------------------- */
 * {
 	box-sizing: border-box;
 	padding: 0;
@@ -22,6 +13,7 @@ html {
 }
 
 body {
+	scroll-behavior: smooth;
 	margin: 0;
 }
 
@@ -39,6 +31,37 @@ h6 {
 	font-weight: 700;
 }
 
+/* ----------------------------------------------- */
+/* theme */
+.light {
+	--clr-primary: #2978b5;
+	--shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.dark {
+	--clr-primary: #90a0d9;
+	--shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+}
+
+/* ----------------------------------------------- */
+/* container */
+.page-container {
+	position: relative;
+	min-height: 100vh;
+}
+
+.content-wrap {
+	padding-bottom: 2.5rem; /* Footer height */
+}
+
+.footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 2.5rem; /* Footer height */
+}
+
+/* ----------------------------------------------- */
 /* Flex */
 .d-flex {
 	display: flex;
@@ -48,7 +71,12 @@ h6 {
 	flex-direction: column;
 }
 
+/* ----------------------------------------------- */
 /* Links */
+.pointer {
+	cursor: pointer;
+}
+
 .subtle-link {
 	display: inline-block;
 	position: relative;
@@ -72,4 +100,21 @@ h6 {
 .subtle-link:hover:after {
 	transform: scaleX(1);
 	transform-origin: bottom left;
+}
+
+/* ----------------------------------------------- */
+/* mouse hover */
+.cursor {
+	position: fixed;
+	left: 0;
+	top: 0;
+	margin-left: 3px;
+	margin-top: 3px;
+	width: 26px;
+	height: 26px;
+	border-radius: 16px;
+	background-color: yellow;
+	mix-blend-mode: difference;
+	z-index: 999;
+	pointer-events: none;
 }
