--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
-
 /* ----------------------------------------------- */
 * {
 	box-sizing: border-box;
@@ -9,6 +6,12 @@
 }
 
 html {
+	--size-1: 2.5rem;
+	--size-2: 2rem;
+	--size-3: 1.75rem;
+	--size-4: 1.5rem;
+	--size-5: 1.25rem;
+	--size-6: 1rem;
 	scroll-behavior: smooth;
 }
 
@@ -19,6 +22,7 @@ body {
 
 a {
 	text-decoration: none;
+	color: inherit;
 }
 
 h1,
@@ -27,8 +31,32 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: "Poppins", sans-serif;
-	font-weight: 700;
+	font-family: Poppins, sans-serif;
+}
+/* ----------------------------------------------- */
+/* typography */
+.h1 {
+	font-size: var(--size-1);
+}
+
+.h2 {
+	font-size: var(--size-2);
+}
+
+.h3 {
+	font-size: var(--size-3);
+}
+
+.h4 {
+	font-size: var(--size-4);
+}
+
+.h5 {
+	font-size: var(--size-5);
+}
+
+.h6 {
+	font-size: var(--size-6);
 }
 
 /* ----------------------------------------------- */
@@ -41,6 +69,12 @@ h6 {
 .dark {
 	--clr-primary: #90a0d9;
 	--shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+}
+
+/* ----------------------------------------------- */
+/* image */
+.logo-main {
+	width: 220px;
 }
 
 /* ----------------------------------------------- */
@@ -58,7 +92,6 @@ h6 {
 	position: absolute;
 	bottom: 0;
 	width: 100%;
-	height: 2.5rem; /* Footer height */
 }
 
 /* ----------------------------------------------- */
@@ -69,6 +102,16 @@ h6 {
 
 .flex-column {
 	flex-direction: column;
+}
+
+.mx-auto {
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.my-auto {
+	margin-top: auto;
+	margin-bottom: auto;
 }
 
 /* ----------------------------------------------- */
