--- a/styles/globals.css
+++ b/styles/globals.css
@@ -60,18 +60,6 @@ h6 {
 }
 
 /* ----------------------------------------------- */
-/* theme */
-.light {
-	--clr-primary: #2978b5;
-	--shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-}
-
-.dark {
-	--clr-primary: #90a0d9;
-	--shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
-}
-
-/* ----------------------------------------------- */
 /* image */
 .logo-main {
 	width: 220px;
@@ -135,14 +123,16 @@ h6 {
 	cursor: pointer;
 }
 
-.subtle-link {
+.subtle-link,
+.anchor {
 	display: inline-block;
 	position: relative;
 	/* color: inherit; */
 	text-decoration: none;
 }
 
-.subtle-link:after {
+.subtle-link:after,
+.anchor:after {
 	content: "";
 	position: absolute;
 	width: 100%;
@@ -155,7 +145,8 @@ h6 {
 	transition: transform 0.25s ease-out;
 }
 
-.subtle-link:hover:after {
+.subtle-link:hover:after,
+.anchor:hover:after {
 	transform: scaleX(1);
 	transform-origin: bottom left;
 }
