--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,93 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@100..900&display=swap");
 /* ------------------------- */
-/* tailwind */
-@layer tailwind {
-  @tailwind base;
-}
+@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  p {
+    @apply text-base;
+  }
+  .btn-active {
+    @apply shadow-none translate-x-boxShadowX translate-y-boxShadowY;
+  }
+  .bg-disabled {
+    background-color:  rgba(19, 1, 1, 0.3);
+    color: rgba(16, 16, 16, 0.3);
+  }
+  .btn-size-sm {
+    @apply px-2 py-1
+  }
+  .btn-size-default {
+    @apply px-4 py-2
+  }
+  .btn-size-lg {
+    @apply h-11 px-8 text-base
+  }
+  .btn-size-icon {
+    @apply p-2.5 m900:p-2
+  }
+}
+
+/* neobrutalism tailwind */
+:root {
+  --bg: #fef2e8;
+  --main: #FFDC58;
+  --main-dark: #807935;
+  --main-accent: #ffc800;
+  --main-accent-dark: #cca007;
+  --border-radius: 5px;
+  --horizontal-box-shadow: 4px;
+  --vertical-box-shadow: 4px;
+  --heading-font-weight: 700;
+  --base-font-weight: 500;
+  --sb-track-color: #ffffff;
+  --sb-thumb-color: #000000;
+  --sb-size: 16px;
+}
+
+body::-webkit-scrollbar,
+.scrollbar::-webkit-scrollbar {
+  width: var(--sb-size);
+}
+
+body::-webkit-scrollbar-track,
+.scrollbar::-webkit-scrollbar-track,
+.code::-webkit-scrollbar-track {
+  background: light-dark(var(--sb-track-color), var(--sb-thumb-color));
+}
+
+body::-webkit-scrollbar-thumb,
+.scrollbar::-webkit-scrollbar-thumb,
+.code::-webkit-scrollbar-thumb,
+figure[data-rehype-pretty-code-figure] pre::-webkit-scrollbar-thumb {
+  background: light-dark(var(--sb-thumb-color), var(--sb-track-color));
+}
+
+@supports not selector(::-webkit-scrollbar) {
+  body,
+  .scrollbar {
+    scrollbar-color: light-dark(var(--sb-thumb-color), var(--sb-track-color));
+  }
+}
+
+figure[data-rehype-pretty-code-figure] pre::-webkit-scrollbar,
+.code::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+figure[data-rehype-pretty-code-figure] pre::-webkit-scrollbar-track,
+.code::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+figure[data-rehype-pretty-code-figure] pre::-webkit-scrollbar-corner,
+.code::-webkit-scrollbar-corner {
+  background: transparent;
+}
+
+/* ----------------------------------------------------------------- */
+/* Custom */
 .hr-error {
   width: 100%; /* Initial width */
   height: 2px; /* Height of the line */
