--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,7 @@
 /* neobrutalism tailwind */
 :root {
   --bg: #fef2e8;
+  --bg-dark: #204059;
   --main: #FFDC58;
   --main-dark: #807935;
   --main-accent: #ffc800;
